[package]
name = "raspi_monitor"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "fs"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
chrono = "0.4.23"
systemstat = "0.2.3"
tracing-appender = "0.2.2"
dotenv = "0.15.0"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.91" 